# hal-interfaces

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.txt  settings.cmake
.gitlab/ci/: build.yml
lib/: CMakeLists.txt  Device.cpp  Error.cpp  IEeprom.cpp  IHumiditySensor.cpp  II2c.cpp  IRtc.cpp  ISpi.cpp  ITemperatureSensor.cpp  IUart.cpp
lib/include/hal/: Device.hpp  Error.hpp  types.hpp
lib/include/hal/gpio/: GpioPort.hpp  GpioPortStub.hpp  IGpioPort.hpp  IGpioRegister.hpp  IPinInput.hpp  IPinOutput.hpp  IPortInput.hpp  IPortOutput.hpp  PinInput.hpp  PinOutput.hpp  PortInput.hpp  PortOutput.hpp  types.hpp
lib/include/hal/i2c/: II2c.hpp  ScopedI2c.hpp
lib/include/hal/sensor/: IHumiditySensor.hpp  ITemperatureSensor.hpp
lib/include/hal/spi/: ISpi.hpp  ScopedSpi.hpp
lib/include/hal/storage/: IEeprom.hpp
lib/include/hal/time/: IRtc.hpp
lib/include/hal/uart/: IUart.hpp
lib/logger/: CMakeLists.txt
lib/logger/include/hal/logger/: interfaces.hpp
tools/: check-clang-tidy.sh
